--- a/ruoyi-admin/src/main/resources/templates/main.html
+++ b/ruoyi-admin/src/main/resources/templates/main.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="gray-bg">
-    <div class="row border-bottom white-bg dashboard-header">
+    <!--<div class="row border-bottom white-bg dashboard-header">
         <div class="col-sm-12">
             <blockquote class="text-warning" style="font-size:14px">
                                            领取阿里云通用云产品1888优惠券
@@ -1528,7 +1528,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <script th:src="@{/js/jquery.min.js}"></script>
     <script th:src="@{/js/bootstrap.min.js}"></script>
     <script th:src="@{/ajax/libs/layer/layer.min.js}"></script>
